--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -2,3 +2,65 @@
 ---
 
 @import "{{ site.theme }}";
+<body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          
+            <a id="forkme_banner" href="https://github.com/bhzeel/frankenstein">View on GitHub</a>
+          
+
+          <h2 id="project_tagline"></h2>
+
+          
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h1 id="where-did-english-really-come-from-">Where did English <em>really</em> come from? <img src="https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png" alt="alt text" title="Logo Title Text 1"></h1>
+<h3 id="short-answer-just-about-everywhere">Short Answer: Just About Everywhere…</h3>
+<hr>
+<h3 id="old-english">Old English</h3>
+<blockquote>
+  <p>4th - 12th centuries</p>
+</blockquote>
+
+<p>In the 5th and 6th centuries, invaders, who were composed of the Angles, the Saxons, and the Jutes, set up the foundations for <strong>Old English</strong> with their <strong>Anglo-Saxon dialects</strong>. After the 6th century, many German “p” sounds changed to “pf”. During this time, other influences were also being introuced to the growing English language, such as Swedish influences. In the years since, Swedish “sk” sounds have changed to “sh” sounds. In fact, many modern words with “sk” sounds actually come from Old Norse influences. Old Norse was introduced to English in the 8th - 11th centuries, during the Viking invasions of Englamd.</p>
+
+<p>Perhaphs one of the more influential invasions of England, at least in terms of language development, was the Norman Conquest of England in 1066. Modern day English shares many similar words with Latin-derived languages, such as French, which was the primary language of the Normans. They were responsible for the introduction of French and Latin words, as well as syntax, grammar and pronounciation, to the existing English language, together creating <strong>Old English</strong>. This language, though a root of the English we speak nowadays, would likely look more familiar to a reader if they know German, sice it actually belongs to the Germanic language family.</p>
+
+<h3 id="middle-english">Middle English</h3>
+<blockquote>
+  <p>12th - 16th centuries</p>
+</blockquote>
+
+<p>Throughout the 13th and 17th centuries, the Renaissance played a significant role in shaping the cultures of multiple European societies, including language in England. Specifically, the introduction of classical Greek and Latin learning not only brought in many Latin-derived words, completely new words were created in order to accomadate for the growing body of European knowledge that was a distinctive feature of the Renaissance. This era of the English language is now referred to as <strong>Middle English</strong>.</p>
+
+<h3 id="modern-english">Modern English</h3>
+<blockquote>
+  <p>18th century - present day</p>
+</blockquote>
+
+<p>By now, English has become a world language, spoken in different areas all over the globe. However, this interaction between English and the rest of the world hasn’t been entirely one-sided. Starting from the Age of Imperialism, English as a language has taken in more global influences, such as from Hindi, Persian, Arabic, Turkish, Malay, and many more, bring us to <strong>Modern English</strong>.</p>
+
+<hr>
+<p><a href="https://youtu.be/YEaSxhcns7Y">Here</a> is a very quick and concise video from TED-Ed if you’d like to learn more.</p>
+
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        
+        <p class="copyright">frankenstein maintained by <a href="https://github.com/bhzeel">bhzeel</a></p>
+        
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+  
+
+</body>
